// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Ex corporis voluptates aut. Perspiciatis consectetur quis sed. Quia nostrum et laborum.
 
Eaque blanditiis laudantium dignissimos quasi. Deserunt molestiae animi ut aliquid cum voluptatem modi ipsam. Et ipsam ea et nihil debitis. Ducimus qui repellendus laudantium blanditiis aut expedita. Magni consequuntur et magni voluptates nesciunt id accusamus voluptas maiores. Itaque et eum voluptas atque et libero.
 
Earum sint sint dicta adipisci consequuntur pariatur id magnam. Cumque similique ut rerum hic vero fuga nihil quo dolor. Dolorum doloribus iste. Veritatis quia odio. Eos aut aut qui dicta eos molestiae odio officia aliquam.
 
Et voluptatum provident dolores quo non maxime eveniet voluptas. Et vero et quam est nobis. In iure quas. Consectetur saepe delectus itaque exercitationem eius aut. Qui dolores perferendis impedit porro sequi error. Autem perferendis molestias.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Et optio veritatis omnis nostrum voluptate ratione est et. Qui quia enim ipsum. Voluptate sint et pariatur voluptate cupiditate aut aspernatur voluptatem ratione.
 
Quidem cupiditate autem veniam vero voluptatem. Blanditiis magnam qui autem qui et consequatur. Laborum sit doloremque optio veritatis. Quaerat consequatur deserunt exercitationem dicta. Eos corrupti architecto at voluptas necessitatibus consequatur. Recusandae qui dolore eveniet.
 
Natus et voluptatum minima qui est. Soluta reprehenderit tempora quae perferendis aliquam esse et itaque exercitationem. Ut dolor omnis quia et. Est ratione error porro ipsum. Nihil est placeat aliquam aperiam eligendi atque tempora.
 
Sed quis neque ex quidem inventore. Harum nesciunt impedit iure. Quas est dolorem ipsum iste voluptatem consequatur. Dolores officiis omnis sit voluptatibus laudantium earum. Laboriosam dolores eligendi neque distinctio nisi.
    </p>
  </div>
</div>
`;
